Fixing alignment of the button and its inner text

--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,9 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); }
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 90%; }
   .card__price-box {
     text-align: center;
     margin-bottom: 8rem;
