--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -107,6 +107,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
+    width: 90%;
   }
   &__price-box {
     text-align: center;
